# todo_notifier

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  config.py  connect.py  constants.py  driver.py  exceptions.py  models.py  notifications.py  pyproject.toml  requirements.txt  setup.py  summary_generators.py  todo_notifier.py  tox.ini  user_driver.py  utils.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  docs.yml  ossar.yml  python-app.yml
.report/: Expired TODO Items.html  Module-wise Summary.html
sample_reports/: Expired TODO Items.html  Module-wise Summary.html  Upcoming Week TODO Items.html
test/: mocks.py  sample_test_file.py  sample_test_file2.py  test_config.py  test_connect.py  test_constants.py  test_driver.py  test_models.py  test_summary_generators.py  test_todo_notifier.py  test_utils.py
tests/: mocks.py  sample_test_file.py  test_config.py  test_connect.py  test_constants.py  test_driver.py  test_models.py  test_notifier.py  test_summary_generators.py  test_todo_notifier.py  test_utils.py
todonotifier/: __init__.py  config.py  connect.py  constants.py  driver.py  models.py  notifications.py  notifier.py  summary_generators.py  todo_notifier.py  utils.py
user_code/: __init__.py
