[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | venv
  | \.history
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations", ".env", "venv", ".local", ".history", ".vscode"]

[tool.poetry]
name = "todonotifier"
version = "1.3.3"
description = "Library to setup automatic TODO Notifications in code"
authors = ["Ashutosh <37182127+ashu-tosh-kumar@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/todonotifier/"
repository = "https://github.com/ashu-tosh-kumar/todo_notifier"
documentation = "https://ashu-tosh-kumar.github.io/todo_notifier/"
exclude = ["tests", "sample_reports"]

[tool.poetry.dependencies]
python = "^3.9"
gitpython = "^3.1.43"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
coverage = "^7.4.4"
pdoc = "^14.4.0"
pytest = "^8.1.1"
twine = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
